Add JKD11 support for Karaf